--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -30,7 +30,7 @@
           </ul>
           <!--/banners_grid -->
           
-          <div class="container margin_60_35">
+          <div class=" p-2 margin_60_35">
             <div class="main_title">
               <h2 translate="home.top_selling"></h2>
               <span translate="home.products"></span>
@@ -62,7 +62,7 @@
                 </div>
               </div> -->
               <!-- /col -->
-              <div *ngFor="let Product of Products"  class="col-6 col-md-4 col-xl-3">
+              <div *ngFor="let Product of Products"  class="col-4 col-md-4 col-xl-3">
                 <div class="grid_item">
                   <span class="ribbon hot" translate="category.fruits"></span>
                   <figure>
@@ -86,7 +86,7 @@
               </div>
             
               <!-- /col -->
-              <div  class="col-6 col-md-4 col-xl-3">
+              <div  class="col-4 col-md-4 col-xl-3">
                 <div class="grid_item">
                   <span class="ribbon hot" translate="category.grocery"></span>
                   <figure>
@@ -110,7 +110,7 @@
               </div>
 
 
-              <div  class="col-6 col-md-4 col-xl-3">
+              <div  class="col-4 col-md-4 col-xl-3">
                 <div class="grid_item">
                   <span class="ribbon hot" translate="category.fruits"></span>
                   <figure>
@@ -134,7 +134,7 @@
               </div>
 
 
-              <div  class="col-6 col-md-4 col-xl-3">
+              <div  class="col-4 col-md-4 col-xl-3">
                 <div class="grid_item">
                   <span class="ribbon hot" translate="home.vegetables"></span>
                   <figure>
@@ -167,7 +167,7 @@
           <!-- /container -->
       
                 
-          <div class="container margin_60_35">
+          <div class="p-2 margin_60_35">
             <div class="main_title">
               <h2 translate="home.top_trending"></h2>
               <span translate="home.products"></span>
@@ -279,7 +279,7 @@
       
       
           <!-- /container -->
-          <div class="container margin_60_35">
+          <div class="p-2 margin_60_35">
             <div class="main_title">
               <h2 translate="home.feature_products"></h2>
               <span translate="products"></span>
