--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -7,9 +7,9 @@
       <div class="owl-slide cover" >
         <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
           <div class="container">
-          <div class="row justify-content-center justify-content-md-end">
+          <div class="row justify-content-center justify-content-md-start">
             <div class="col-lg-6 static">
-            <div class="slide-text text-right white">
+            <div class="slide-text white">
               <h2 class="owl-slide-animated owl-slide-title" translate="home.fresh_fruits"> </h2>
               <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Limited items available at this price
@@ -21,9 +21,6 @@
           </div>
         </div>
         </div>
-      <div class="carousel-caption">
-      
-      </div>
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
@@ -58,8 +55,8 @@
         <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
           <div class="container">
           <div class="row justify-content-center justify-content-md-start">
-            <div class="col-lg-12 static">
-            <div class="slide-text text-center white">
+            <div class="col-lg-6 static">
+            <div class="slide-text white">
               <h2 class="owl-slide-animated owl-slide-title" translate="home.grocery"></h2>
               <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Lightweight cushioning and durable support with a Phylon midsole
