--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -176,7 +176,7 @@
                                 <div class="header_account_list header_wishlist">
                                     <div class="language_currency">
                                         <ul>
-                                            <li class="language"><a translate="home.language"><i class="icon-right ion-ios-arrow-down"></i></a>
+                                            <li class="language"><a translate="home.language"></a>
                                                 <ul class="dropdown_language">
                                                     <li><button class="btn btn-sm btn-link" (click)="changeLangage('en')">English</button></li>
                                                     <li><button class="btn btn-sm btn-link" (click)="changeLangage('ar')" href="#">العربية</button></li>
@@ -193,7 +193,7 @@
               </div>
           </div>
           <div class="header_bottom sticky-header">
-              <div class="p-2">
+              <div class="pl-2">
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2">
                           <div class="categories_menu">
