--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,42 +1,15 @@
 <app-slider></app-slider>
-          <ul id="banners_grid" class="clearfix">
-            <li>
-              <a href="#0" class="img_container">
-                <img src="assets/img/vegetables-image.jpg" data-src="assets/img/homepage/vegetables-image.jpg" alt="" class="lazy">
-                <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3 translate="home.vegetables"></h3>
-                  <div><span class="btn_1" translate="home.shop_now"></span></div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#0" class="img_container">
-                <img src="assets/img/grocery-image.jpg" data-src="assets/img/homepage/grocery-image.jpg" alt="" class="lazy">
-                <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3 translate="home.grocery"></h3>
-                  <div><span class="btn_1" translate="home.shop_now"></span></div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#0" class="img_container">
-                <img src="assets/img/fruits-image.jpg" data-src="assets/img/homepage/fruits-image.jpg" alt="" class="lazy">
-                <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
-                  <h3 translate="home.fruits"></h3>
-                  <div><span class="btn_1" translate="home.shop_now"></span></div>
-                </div>
-              </a>
-            </li>
-          </ul>
+         
+          
           <!--/banners_grid -->
           
-          <div class=" p-2 margin_60_35">
+          <div class=" mt-3 p-2 margin_60_35">
             <div class="main_title">
               <h2 translate="home.top_selling"></h2>
               <span translate="home.products"></span>
               <p translate="home.top_selling_products"></p>
             </div>
-            <div class="row small-gutters">
+            <div class="row small-gutters" [ngClass]="{'rtl': is_rtl}">
               <!-- <div class="col-6 col-md-4 col-xl-3">
                 <div class="grid_item">
                   <figure>
@@ -173,7 +146,7 @@
               <span translate="home.products"></span>
               <p translate="home.top_trending_items"></p>
             </div>
-            <div class="row small-gutters">
+            <div class="row small-gutters" [ngClass]="{'rtl': is_rtl}">
        
             
               <!-- /col -->
@@ -285,7 +258,7 @@
               <span translate="products"></span>
               <p translate="home.feature_items"></p>
             </div>
-            <div class="row small-gutters">
+            <div class="row small-gutters" [ngClass]="{'rtl': is_rtl}">
        
             
               <!-- /col -->
@@ -390,6 +363,60 @@
       
           <!-- /bg_gray -->
       
-    
+          <div class="row mt-4" [ngClass]="{'rtl': is_rtl}">
+            <div class="col-lg-6 p-0">
+              <ul id="banners_grid" class="clearfix">
+                <li class="main">
+                  <a href="#0" class="img_container">
+                    <img src="assets/img/vegetables-image.jpg" data-src="assets/img/homepage/vegetables-image.jpg" alt="" class="lazy">
+                    <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                      <h3 translate="home.vegetables"></h3>
+                      <div><span class="btn_1" translate="home.shop_now"></span></div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-6 p-0">
+              <ul id="banners_grid" class="clearfix">
+                <li>
+                  <a href="#0" class="img_container">
+                    <img src="assets/img/vegetables-image.jpg" data-src="assets/img/homepage/vegetables-image.jpg" alt="" class="lazy">
+                    <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                      <h3 translate="home.vegetables"></h3>
+                      <div><span class="btn_1" translate="home.shop_now"></span></div>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#0" class="img_container">
+                    <img src="assets/img/grocery-image.jpg" data-src="assets/img/homepage/grocery-image.jpg" alt="" class="lazy">
+                    <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                      <h3 translate="home.grocery"></h3>
+                      <div><span class="btn_1" translate="home.shop_now"></span></div>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#0" class="img_container">
+                    <img src="assets/img/fruits-image.jpg" data-src="assets/img/homepage/fruits-image.jpg" alt="" class="lazy">
+                    <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                      <h3 translate="home.fruits"></h3>
+                      <div><span class="btn_1" translate="home.shop_now"></span></div>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#0" class="img_container">
+                    <img src="assets/img/fruits-image.jpg" data-src="assets/img/homepage/fruits-image.jpg" alt="" class="lazy">
+                    <div class="short_info opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                      <h3 translate="home.fruits"></h3>
+                      <div><span class="btn_1" translate="home.shop_now"></span></div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
       
   
