--- a/src/assets/css/home_1.css
+++ b/src/assets/css/home_1.css
@@ -3,13 +3,21 @@
 /*============================================================================================*/
 ul#banners_grid {
   list-style: none;
-  padding: 0;
+  padding-left: 5px;
+  padding-right: 5px;
   margin: 0;
   width: 100%;
 }
 ul#banners_grid li {
   position: relative;
-  width: 33.33%;
+  width: 50%;
+  float: left;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #fff;
+}
+ul#banners_grid li.main {
+  position: relative;
+  width: 100%;
   float: left;
   border-top: 5px solid #fff;
   border-right: 5px solid #fff;
@@ -31,6 +39,14 @@ ul#banners_grid li a.img_container {
   display: block;
   width: 100%;
   height: 250px;
+}
+ul#banners_grid li.main a.img_container {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+  display: block;
+  width: 100%;
+  height: 500px;
 }
 @media (max-width: 767px) {
   ul#banners_grid li a.img_container {
