--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,6 +2,139 @@
          
           
           <!--/banners_grid -->
+          <div class="row m-3 ">
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/orange.jpg" src="assets/img/products/orange.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.orange"></a></h3>
+                    <p class="css-sjzzz0" translate="category.fruits"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">90 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/olive-oil.jpg" src="assets/img/products/olive-oil.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
+                    <p class="css-sjzzz0" translate="category.grocery"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">150 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/pomegranate.jpg" src="assets/img/products/pomegranate.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
+                    <p class="css-sjzzz0" translate="category.fruits"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">1200 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/tomatoes.jpg" src="assets/img/products/tomatoes.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.tomato"></a></h3>
+                    <p class="css-sjzzz0" translate="home.vegetables"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">90 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/pomegranate.jpg" src="assets/img/products/pomegranate.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
+                    <p class="css-sjzzz0" translate="category.fruits"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">120 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+
+            <div class="col-lg-2">
+              <div class="product-item" style="width: 200px;">
+                <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
+                  <div class="css-wt0fwe">
+                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                  </div>
+                  <div class="css-c8w35i">
+                    <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
+                      <figure class="css-1peg6kw"><img width="100%" class="lazy loaded" alt="Orange" data-src="assets/img/products/olive-oil.jpg" src="assets/img/products/olive-oil.jpg" data-was-processed="true">
+                      <div class="img-placeholder"></div>
+                    </figure></a></div>
+                    <h3 class="css-1pnv3q4"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
+                    <p class="css-sjzzz0" translate="category.grocery"></p>
+                    <!-- <div class="css-3ht5in"><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">$</span></div>
+                    </div> -->
+                    <div class="css-abm2xy">
+                      <div class="css-1mwn02k d-flex">
+                        <div type="discount" class="">150 $ </div>
+                        <button type="button" class="css-du7cmn" data-testid="button">Add </button>
+                      </div></div></div></div></div>
+            </div>
+            
+          </div>
           
           <div class=" mt-3 p-2 margin_60_35">
             <div class="main_title">
