--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -72,7 +72,7 @@
               <div class="product-item" style="width: 200px;">
                 <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
-                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                    <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
                   </div>
                   <div class="css-c8w35i">
                     <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
@@ -94,7 +94,7 @@
               <div class="product-item" style="width: 200px;">
                 <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
-                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                    <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
                   </div>
                   <div class="css-c8w35i">
                     <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
@@ -116,7 +116,7 @@
               <div class="product-item" style="width: 200px;">
                 <div points="0" title="Huawei Y7 Prime Dual SIM, 32GB, 3GB RAM, 4G LTE - Red" data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
-                    <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
+                    <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
                   </div>
                   <div class="css-c8w35i">
                     <div class="css-hg3rl0"><a href="/mafegy/en/p/501529">
