--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -74,6 +74,7 @@ Author URI: http://themeforest.net/user/Ansonika/
 
 .rtl{
   direction: rtl;
+  text-align: right;
 }
 .header-icon_like_custom:before {
   content: '\0041';
