--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -24,7 +24,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">90 $ </div>
+                        <div type="discount" class="">90 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -46,7 +46,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">150 $ </div>
+                        <div type="discount" class="">150 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -68,7 +68,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">1200 $ </div>
+                        <div type="discount" class="">1200 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -89,7 +89,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">90 $ </div>
+                        <div type="discount" class="">90 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -111,7 +111,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">120 $ </div>
+                        <div type="discount" class="">120 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -133,7 +133,7 @@
                     </div> -->
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
-                        <div type="discount" class="">150 $ </div>
+                        <div type="discount" class="">150 EGP </div>
                         <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                       </div></div></div></div></div>
             </div>
@@ -297,7 +297,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">90 $ </div>
+                          <div type="discount" class="">90 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -319,7 +319,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">150 $ </div>
+                          <div type="discount" class="">150 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -341,7 +341,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">1200 $ </div>
+                          <div type="discount" class="">1200 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -362,7 +362,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">90 $ </div>
+                          <div type="discount" class="">90 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -384,7 +384,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">120 $ </div>
+                          <div type="discount" class="">120 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -406,7 +406,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">150 $ </div>
+                          <div type="discount" class="">150 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -507,7 +507,7 @@
           <div class="p-2 margin_60_35">
             <div class="main_title">
               <h2 translate="home.feature_products"></h2>
-              <span translate="products"></span>
+              <span translate="home.products"></span>
               <p translate="home.feature_items"></p>
             </div>
 
@@ -529,7 +529,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">90 $ </div>
+                          <div type="discount" class="">90 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -551,7 +551,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">150 $ </div>
+                          <div type="discount" class="">150 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -573,7 +573,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">1200 $ </div>
+                          <div type="discount" class="">1200 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -594,7 +594,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">90 $ </div>
+                          <div type="discount" class="">90 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -616,7 +616,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">120 $ </div>
+                          <div type="discount" class="">120 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -638,7 +638,7 @@
                       </div> -->
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
-                          <div type="discount" class="">150 $ </div>
+                          <div type="discount" class="">150 EGP </div>
                           <button type="button" class="css-du7cmn" data-testid="button">Add </button>
                         </div></div></div></div></div>
               </div>
@@ -734,6 +734,13 @@
           </div>
       
           <!-- /bg_gray -->
+
+          <div class="mt-4 margin_60_35">
+            <div class="main_title">
+              <h2 translate="home.popular_categories"></h2>
+              <span translate="home.products"></span>
+              <p translate="home.popular_categories"></p>
+            </div>
       
           <div class="row mt-4" [ngClass]="{'rtl': is_rtl}">
             <div class="col-lg-6 p-0">
