--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -29,7 +29,7 @@
                 <h3 translate="category.orange"></h3>
               </a>
               <div class="price_box">
-                <span class="new_price">${{Product.price}}</span>
+                <span class="new_price">{{Product.price}} EGP</span>
               </div>
               <ul>
                 <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
@@ -51,7 +51,7 @@
                 <h3 translate="category.olive_oil"></h3>
               </a>
               <div class="price_box">
-                <span class="new_price">$100</span>
+                <span class="new_price">100 EGP</span>
               </div>
               <ul>
                 <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
@@ -93,7 +93,7 @@
                                     <span class="item_cart" translate="category.orange"></span>
                                 </td>
                                 <td>
-                                    <strong>$140.00</strong>
+                                    <strong>140.00 EGP</strong>
                                 </td>
                                 <td>
                                     <div class="numbers-row">
@@ -101,7 +101,7 @@
                                     <div class="inc button_inc">+</div><div class="dec button_inc">-</div></div>
                                 </td>
                                 <td>
-                                    <strong>$140.00</strong>
+                                    <strong>140.00 EGP</strong>
                                 </td>
                                 <td class="options">
                                     <a href="#"><i class="ti-trash"></i></a>
@@ -115,7 +115,7 @@
                                     <span class="item_cart" translate="category.tomato"></span>
                                 </td>
                                 <td>
-                                    <strong>$110.00</strong>
+                                    <strong>110.00 EGP</strong>
                                 </td>
                                 <td>
                                     <div class="numbers-row">
@@ -123,7 +123,7 @@
                                     <div class="inc button_inc">+</div><div class="dec button_inc">-</div></div>
                                 </td>
                                 <td>
-                                    <strong>$110.00</strong>
+                                    <strong>110.00 EGP</strong>
                                 </td>
                                 <td class="options">
                                     <a href="#"><i class="ti-trash"></i></a>
@@ -156,13 +156,13 @@
             <div class="col-xl-4 col-lg-4 col-md-6">
         <ul>
             <li>
-                <span translate="cart.subtotal"></span> $240.00
+                <span translate="cart.subtotal"></span> 240.00 EGP
             </li>
             <li>
-                <span translate="cart.shiping"></span> $7.00
+                <span translate="cart.shiping"></span> 7.00 EGP
             </li>
             <li>
-                <span translate="cart.total"></span> $247.00
+                <span translate="cart.total"></span> 247.00 EGP
             </li>
         </ul>
         <a routerLink="/checkout" class="btn_1 full-width cart" translate="cart.proceed"></a>
