--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -214,15 +214,15 @@
 						<h3>3. Order Summary</h3>
 					<div class="box_general summary">
 						<ul>
-							<li class="clearfix"><em>1x Armor Air X Fear</em>  <span>$145.00</span></li>
-							<li class="clearfix"><em>2x Armor Air Zoom Alpha</em> <span>$115.00</span></li>
+							<li class="clearfix"><em>1x Armor Air X Fear</em>  <span>145.00 EGP</span></li>
+							<li class="clearfix"><em>2x Armor Air Zoom Alpha</em> <span>115.00 EGP</span></li>
 						</ul>
 						<ul>
-							<li class="clearfix"><em><strong>Subtotal</strong></em>  <span>$450.00</span></li>
-							<li class="clearfix"><em><strong>Shipping</strong></em> <span>$0</span></li>
+							<li class="clearfix"><em><strong>Subtotal</strong></em>  <span>450.00 EGP</span></li>
+							<li class="clearfix"><em><strong>Shipping</strong></em> <span>0 EGP</span></li>
 							
 						</ul>
-						<div class="total clearfix">TOTAL <span>$450.00</span></div>
+						<div class="total clearfix">TOTAL <span>450.00 EGP</span></div>
 						<div class="form-group">
 								<label class="container_check">Register to the Newsletter.
 								  <input type="checkbox" checked>
